--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,6 +57,6 @@ dependencies {
 
     implementation 'com.github.bumptech.glide:glide:4.9.0'
 
-
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9")
 
 }
