--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:theme="@style/Theme.Samquicksal2"
         android:usesCleartextTraffic="true">
         <activity
+            android:name=".ForgotPasswordActivity"
+            android:theme="@style/LoginScreen"  />
+        <activity
             android:name=".BdNoshowActivity"
             android:theme="@style/HomeScreen" />
         <activity
