--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.altwav.samquicksal2">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE"/>
 
     <application
         android:allowBackup="true"
@@ -13,6 +15,19 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Samquicksal2"
         android:usesCleartextTraffic="true">
+
+        <!-- Set custom default icon. This is used when no icon is set for incoming notification messages.
+        See README(https://goo.gl/l4GJaQ) for more. -->
+        <meta-data
+            android:name="com.google.firebase.messaging.default_notification_icon"
+            android:resource="@drawable/samquicksal_logo" />
+        <!-- Set color used with incoming notification messages. This is used when no color is set for the incoming
+             notification message. See README(https://goo.gl/6BKBk7) for more. -->
+        <meta-data
+            android:name="com.google.firebase.messaging.default_notification_color"
+            android:resource="@color/loginColor" />
+
+
         <activity
             android:name=".ForgotPasswordActivity"
             android:theme="@style/LoginScreen"  />
@@ -116,6 +131,12 @@
             android:name=".MainActivity"
             android:theme="@style/HomeScreen" />
         <activity
+            android:name=".Register"
+            android:theme="@style/RegistrationScreen" />
+        <activity
+            android:name=".Login"
+            android:theme="@style/LoginScreen" />
+        <activity
             android:name=".SplashScreen"
             android:theme="@style/SplashScreen">
             <intent-filter>
@@ -124,12 +145,17 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".Register"
-            android:theme="@style/RegistrationScreen" />
-        <activity
-            android:name=".Login"
-            android:theme="@style/LoginScreen" />
+
+        <service
+            android:name=".MyFirebaseMessagingService"
+            android:exported="false"
+            tools:ignore="Instantiatable">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+                <action android:name="com.google.android.c2dm.intent.RECEIVE"/>
+            </intent-filter>
+        </service>
+
     </application>
 
 </manifest>
