--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
 
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -17,6 +18,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Samquicksal2"
         android:usesCleartextTraffic="true">
+        <activity
+            android:name=".CheckoutStatusActivity"
+            android:theme="@style/LoginScreen" />
         <activity
             android:name=".ForgotPasswordActivity"
             android:theme="@style/LoginScreen" />
